Bug 424814: Update prototype test suite to 1.6.0.2, patch by harthur, r=sdwilsh
UltraBlame original commit: 6eb627215b618ad6faf2f738305ada9f3430c6f0

--- a/dom/tests/mochitest/ajax/prototype/Makefile.in
+++ b/dom/tests/mochitest/ajax/prototype/Makefile.in
@@ -173,7 +173,7 @@ Copyright
 (
 C
 )
-2007
+2008
 #
 the
 Initial
@@ -190,6 +190,15 @@ Contributor
 s
 )
 :
+#
+Heather
+Arthur
+<
+harthur
+cmu
+.
+edu
+>
 #
 #
 Alternatively
