--- a/dom/tests/mochitest/ajax/prototype/test/unit/Makefile.in
+++ b/dom/tests/mochitest/ajax/prototype/test/unit/Makefile.in
@@ -173,7 +173,7 @@ Copyright
 (
 C
 )
-2007
+2008
 #
 the
 Initial
@@ -190,6 +190,15 @@ Contributor
 s
 )
 :
+#
+Heather
+Arthur
+<
+harthur
+cmu
+.
+edu
+>
 #
 #
 Alternatively
@@ -443,6 +452,8 @@ DIRS
 \
 fixtures
 \
+tmp
+\
 (
 NULL
 )
@@ -459,57 +470,65 @@ mk
 _TEST_FILES
 =
 \
-ajax
+ajax_test
 .
-html
+js
 \
-array
+array_test
 .
-html
+js
 \
-base
+base_test
 .
-html
+js
 \
-dom
+dom_test
 .
-html
+js
 \
-element_mixins
+element_mixins_test
 .
-html
+js
 \
-enumerable
+enumerable_test
 .
-html
+js
 \
-form
+event_test
 .
-html
+js
 \
-hash
+form_test
 .
-html
+js
 \
-position
+hash_test
 .
-html
+js
 \
-range
+number_test
 .
-html
+js
 \
-selector
+position_test
 .
-html
+js
 \
-string
+range_test
 .
-html
+js
 \
-unit_tests
+selector_test
 .
-html
+js
+\
+string_test
+.
+js
+\
+unittest_test
+.
+js
 \
 (
 NULL
