--- a/dom/tests/mochitest/ajax/prototype/test/Makefile.in
+++ b/dom/tests/mochitest/ajax/prototype/test/Makefile.in
@@ -173,7 +173,7 @@ Copyright
 (
 C
 )
-2007
+2008
 #
 the
 Initial
@@ -190,6 +190,15 @@ Contributor
 s
 )
 :
+#
+Heather
+Arthur
+<
+harthur
+cmu
+.
+edu
+>
 #
 #
 Alternatively
@@ -440,6 +449,8 @@ unit
 \
 lib
 \
+functional
+\
 (
 NULL
 )
@@ -459,6 +470,14 @@ _TEST_FILES
 test
 .
 css
+\
+browser
+.
+html
+\
+console
+.
+html
 \
 (
 NULL
