--- a/dom/tests/mochitest/ajax/prototype/test/lib/Makefile.in
+++ b/dom/tests/mochitest/ajax/prototype/test/lib/Makefile.in
@@ -173,7 +173,7 @@ Copyright
 (
 C
 )
-2007
+2008
 #
 the
 Initial
@@ -190,6 +190,15 @@ Contributor
 s
 )
 :
+#
+Heather
+Arthur
+<
+harthur
+cmu
+.
+edu
+>
 #
 #
 Alternatively
