--- a/dom/tests/mochitest/ajax/prototype/test/unit/fixtures/Makefile.in
+++ b/dom/tests/mochitest/ajax/prototype/test/unit/fixtures/Makefile.in
@@ -173,7 +173,7 @@ Copyright
 (
 C
 )
-2007
+2008
 #
 the
 Initial
@@ -190,6 +190,15 @@ Contributor
 s
 )
 :
+#
+Heather
+Arthur
+<
+harthur
+cmu
+.
+edu
+>
 #
 #
 Alternatively
@@ -456,11 +465,79 @@ mk
 _TEST_FILES
 =
 \
+ajax
+.
+html
+\
+ajax
+.
+js
+\
+array
+.
+html
+\
+base
+.
+html
+\
+base
+.
+js
+\
 content
 .
 html
 \
+data
+.
+json
+\
+dom
+.
+css
+\
+dom
+.
+html
+\
+dom
+.
+js
+\
+element_mixins
+.
+html
+\
+element_mixins
+.
+js
+\
 empty
+.
+html
+\
+empty
+.
+js
+\
+enumerable
+.
+html
+\
+enumerable
+.
+js
+\
+event
+.
+html
+\
+form
+.
+html
+\
+hash
 .
 js
 \
@@ -471,6 +548,22 @@ js
 logo
 .
 gif
+\
+position
+.
+html
+\
+selector
+.
+html
+\
+string
+.
+js
+\
+unittest
+.
+html
 \
 (
 NULL
