--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -530,10 +530,19 @@ test_onloadedmetadata
 .
 html
 \
+#
 test_progress1
 .
 html
 \
+disabled
+while
+we
+figure
+out
+the
+random
+failure
 test_progress3
 .
 html
