--- a/toolkit/components/filepicker/src/nsFilePicker.js.in
+++ b/toolkit/components/filepicker/src/nsFilePicker.js.in
@@ -1578,18 +1578,12 @@ nsISupports
 return
 this
 ;
-Components
-.
-returnCode
-=
+throw
 Components
 .
 results
 .
 NS_ERROR_NO_INTERFACE
-;
-return
-null
 ;
 }
 show
