Bug 469789 - Update "can't package this" message for the libxul world, r=ted
UltraBlame original commit: 994388063d689928d9f9340c0d03a9fae7a0b325

--- a/browser/installer/Makefile.in
+++ b/browser/installer/Makefile.in
@@ -542,41 +542,45 @@ endif
 else
 define
 message
-Please
-don
-'
-t
-package
-debug
-builds
-.
-Your
+You
+need
+to
 build
-was
-configured
-without
--
--
-enable
--
-static
-or
+with
 -
 -
 enable
 -
 libxul
-.
-This
-is
-probably
-because
-it
-'
-s
-a
+(
+the
+default
+unless
+you
+specify
+-
+-
+disable
+-
+libxul
+or
+-
+-
+enable
+-
+shared
+or
+-
+-
+enable
+-
 debug
+)
+to
+package
+a
 build
+.
 endef
 default
 libs
