--- a/toolkit/components/url-classifier/tests/mochitest/Makefile.in
+++ b/toolkit/components/url-classifier/tests/mochitest/Makefile.in
@@ -452,11 +452,27 @@ test_classifier
 .
 html
 \
+test_classifier_worker
+.
+html
+\
 classifierFrame
 .
 html
 \
+workerFrame
+.
+html
+\
+cleanWorker
+.
+js
+\
 evil
+.
+js
+\
+evilWorker
 .
 js
 \
