imported patch bug435293-csstransform-tests
UltraBlame original commit: ef6e2a5d9f5f2552f1667cec05c3841c0fefc077

--- a/layout/base/tests/Makefile.in
+++ b/layout/base/tests/Makefile.in
@@ -505,6 +505,24 @@ test_bug465448
 .
 xul
 \
+test_bug435293
+-
+scale
+.
+html
+\
+test_bug435293
+-
+skew
+.
+html
+\
+test_bug435293
+-
+interaction
+.
+html
+\
 (
 NULL
 )
