--- a/layout/base/tests/Makefile.in
+++ b/layout/base/tests/Makefile.in
@@ -505,24 +505,6 @@ test_bug465448
 .
 xul
 \
-test_bug435293
--
-scale
-.
-html
-\
-test_bug435293
--
-skew
-.
-html
-\
-test_bug435293
--
-interaction
-.
-html
-\
 (
 NULL
 )
@@ -562,6 +544,44 @@ See
 bug
 407080
 )
+#
+test_bug435293
+-
+scale
+.
+html
+test_bug435293
+-
+skew
+.
+html
+#
+and
+test_bug435293
+-
+interaction
+.
+html
+are
+currently
+disabled
+due
+to
+an
+#
+excessive
+number
+of
+leaks
+that
+they
+expose
+see
+bug
+474016
+for
+details
+.
 #
 Tests
 for
