Bug 461841: Use configure-defined macros in #ifdefs for WinCE in js/src. r=crowder
Perform the appropriate configure-time tests, and hard-code the
answers for targets that don't support autoconf-style tests.  Check
for the io.h header, and the setbuf and isatty library functions.

In js/src/xpconnect/shell/xpcshell.cpp, use configure-#defined
preprocessor symbols to decide what to #include and use.  The
top-level configure script defines the preprocessor symbols used here.

In js/src/prmjtime.cpp, use them to select the appropriate method for
retrieving fine-grained time information for Windows and WinCE.  The
js/src/configure script defines the preprocessor symbols used here.

(This should cover the issues addressed by patch.v2 in bug 461841,
except for the stdint issue.)

UltraBlame original commit: 7cf6db4b75c0daca9a188d839ca06dacbefbed49

--- a/configure.in
+++ b/configure.in
@@ -5760,6 +5760,52 @@ SKIP_COMPILER_CHECKS
 SKIP_LIBRARY_CHECKS
 =
 1
+#
+Since
+we
+'
+re
+skipping
+compiler
+and
+library
+checks
+hard
+-
+code
+#
+some
+facts
+here
+.
+case
+"
+target
+"
+in
+*
+-
+wince
+)
+;
+;
+*
+)
+AC_DEFINE
+(
+HAVE_IO_H
+)
+AC_DEFINE
+(
+HAVE_SETBUF
+)
+AC_DEFINE
+(
+HAVE_ISATTY
+)
+;
+;
+esac
 fi
 fi
 #
@@ -23323,6 +23369,12 @@ XKBlib
 .
 h
 )
+AC_CHECK_HEADERS
+(
+io
+.
+h
+)
 dnl
 These
 are
@@ -26581,6 +26633,8 @@ stat64
 lstat64
 truncate64
 statvfs64
+setbuf
+isatty
 )
 AC_CHECK_FUNCS
 (
