--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -5248,6 +5248,13 @@ facts
 here
 .
 #
+Common
+to
+all
+MSVC
+environments
+:
+#
 Windows
 lacks
 <
@@ -5265,6 +5272,35 @@ on
 AC_DEFINE
 (
 JS_HAVE___INTN
+)
+case
+"
+target
+"
+in
+*
+-
+wince
+)
+AC_DEFINE
+(
+HAVE_SYSTEMTIMETOFILETIME
+)
+AC_DEFINE
+(
+JS_CRTDEFS_H_HAS_INTPTR_T
+)
+;
+;
+*
+)
+AC_DEFINE
+(
+HAVE_SYSTEMTIMETOFILETIME
+)
+AC_DEFINE
+(
+HAVE_GETSYSTEMTIMEASFILETIME
 )
 #
 Windows
@@ -5331,6 +5367,9 @@ AC_DEFINE
 (
 JS_STDDEF_H_HAS_INTPTR_T
 )
+;
+;
+esac
 fi
 fi
 #
