--- a/js/src/js-config.h.in
+++ b/js/src/js-config.h.in
@@ -625,6 +625,31 @@ undef
 JS_STDDEF_H_HAS_INTPTR_T
 /
 *
+Define
+to
+1
+if
+#
+including
+<
+crtdefs
+.
+h
+>
+provides
+definitions
+for
+intptr_t
+and
+uintptr_t
+.
+*
+/
+#
+undef
+JS_CRTDEFS_H_HAS_INTPTR_T
+/
+*
 The
 configure
 script
