Bug 463830. Use the video file name as the window title for standalone video objects, for now. r+sr=roc,r+sr=bzbarsky
UltraBlame original commit: 7e0d34e958e66bc3c8ae582657080886d1a6d6d6

--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -580,7 +580,11 @@ html
 \
 320x240
 .
-ogg
+ogv
+\
+test_videoDocumentTitle
+.
+html
 \
 bug461281
 .
@@ -588,7 +592,7 @@ ogg
 \
 seek
 .
-ogg
+ogv
 \
 (
 NULL
@@ -623,6 +627,10 @@ MOZ_WAVE
 _TEST_FILES
 +
 =
+\
+test_audioDocumentTitle
+.
+html
 \
 big
 .
