Bug 470963 - stop copying build/pgo/certs to the objdir, r=ted.mielczarek
UltraBlame original commit: 851e7b387ec054cba10798e35f973a507061dcfa

--- a/testing/mochitest/Makefile.in
+++ b/testing/mochitest/Makefile.in
@@ -563,13 +563,22 @@ _tests
 (
 relativesrcdir
 )
-_CERTS_DIR
+_PROFILE_DIR
 =
 (
 DEPTH
 )
 /
 _profile
+/
+pgo
+_CERTS_SRC_DIR
+=
+(
+topsrcdir
+)
+/
+build
 /
 pgo
 /
@@ -767,7 +776,7 @@ BIN_SUFFIX
 "
 \
 -
-DCERTS_DIR
+DPROFILE_DIR
 =
 \
 "
@@ -775,7 +784,18 @@ DCERTS_DIR
 .
 /
 (
-_CERTS_DIR
+_PROFILE_DIR
+)
+\
+"
+\
+-
+DCERTS_SRC_DIR
+=
+\
+"
+(
+_CERTS_SRC_DIR
 )
 \
 "
