Backing out bug 470963
UltraBlame original commit: e7e8a8f2783d0c14e1b0e58643ebc2e1e7fcf970

--- a/testing/mochitest/Makefile.in
+++ b/testing/mochitest/Makefile.in
@@ -563,22 +563,13 @@ _tests
 (
 relativesrcdir
 )
-_PROFILE_DIR
+_CERTS_DIR
 =
 (
 DEPTH
 )
 /
 _profile
-/
-pgo
-_CERTS_SRC_DIR
-=
-(
-topsrcdir
-)
-/
-build
 /
 pgo
 /
@@ -776,7 +767,7 @@ BIN_SUFFIX
 "
 \
 -
-DPROFILE_DIR
+DCERTS_DIR
 =
 \
 "
@@ -784,18 +775,7 @@ DPROFILE_DIR
 .
 /
 (
-_PROFILE_DIR
-)
-\
-"
-\
--
-DCERTS_SRC_DIR
-=
-\
-"
-(
-_CERTS_SRC_DIR
+_CERTS_DIR
 )
 \
 "
