Bug 468996. Implement SMIL animateTransform element. r+sr=roc
UltraBlame original commit: c8da73bbcb1b3a028e98c377103a1491944b051b

--- a/content/svg/content/src/Makefile.in
+++ b/content/svg/content/src/Makefile.in
@@ -780,11 +780,23 @@ nsSVGAnimateElement
 .
 cpp
 \
+nsSVGAnimateTransformElement
+.
+cpp
+\
 nsSVGAnimationElement
 .
 cpp
 \
 nsSVGSetElement
+.
+cpp
+\
+nsSVGTransformSMILType
+.
+cpp
+\
+nsSVGTransformSMILAttr
 .
 cpp
 \
