bug 474281 - accessible name of html table cells is incorrectly including descendants, r=aaronlev, r=surkov
UltraBlame original commit: f177a1157d4bfd5c8b8f37254582c5be72410c09

--- a/accessible/tests/mochitest/Makefile.in
+++ b/accessible/tests/mochitest/Makefile.in
@@ -486,6 +486,10 @@ nsIAccessibleEditableText
 .
 js
 \
+role
+.
+js
+\
 test_aria_activedescendant
 .
 html
@@ -543,10 +547,6 @@ html
 temporarily
 disabled
 )
-\
-test_nsHyperTextAcc_roles
-.
-html
 \
 test_nsIAccessible_actions
 .
@@ -669,6 +669,14 @@ test_nsIAccessNode_utils
 html
 \
 test_nsOuterDocAccessible
+.
+html
+\
+test_role_nsHyperTextAcc
+.
+html
+\
+test_role_table_cells
 .
 html
 \
