Bug 470971 - Add ability to pass the GRE dir to xpcshell, r=ted
UltraBlame original commit: 700bca4b693f4e21805bc035f36e5b66ae9fdf60

--- a/js/src/xpconnect/shell/Makefile.in
+++ b/js/src/xpconnect/shell/Makefile.in
@@ -439,6 +439,8 @@ js
 \
 caps
 \
+xulapp
+\
 (
 NULL
 )
@@ -484,11 +486,11 @@ LIB_SUFFIX
 )
 \
 (
-MOZ_JS_LIBS
+LIBXUL_LIBS
 )
 \
 (
-XPCOM_LIBS
+MOZ_JS_LIBS
 )
 \
 (
