Backed out changeset 700bca4b693f due to reftest failure (bug 470971)
UltraBlame original commit: 929d0451c9b5ac985511f01d48d8347a5a788276

--- a/js/src/xpconnect/shell/Makefile.in
+++ b/js/src/xpconnect/shell/Makefile.in
@@ -439,8 +439,6 @@ js
 \
 caps
 \
-xulapp
-\
 (
 NULL
 )
@@ -486,11 +484,11 @@ LIB_SUFFIX
 )
 \
 (
-LIBXUL_LIBS
+MOZ_JS_LIBS
 )
 \
 (
-MOZ_JS_LIBS
+XPCOM_LIBS
 )
 \
 (
@@ -500,9 +498,6 @@ NSPR_LIBS
 (
 NULL
 )
-NSDISTMODE
-=
-copy
 include
 (
 topsrcdir
