Bug 471854 - Build error in accessible/public/msaa on x64 Windows with VC8; r=(m_kato + ted.mielczarek)
UltraBlame original commit: 24a0ddf8cdfa9c85421fa33dc19f4a3ae4959488

--- a/configure.in
+++ b/configure.in
@@ -5064,31 +5064,19 @@ midl
 flags
 ]
 )
-if
-test
+case
+"
+target
+"
+in
+i
+*
+86
 -
-n
-"
-_MIDL_MAJOR_VERSION
-"
-;
-then
-if
-test
-\
-(
-"
-_MIDL_MAJOR_VERSION
-"
--
-gt
-"
-6
-"
-\
+*
 )
--
-o
+if
+test
 \
 (
 "
@@ -5096,30 +5084,7 @@ _MIDL_MAJOR_VERSION
 "
 =
 "
-6
-"
--
-a
-"
-_MIDL_MINOR_VERSION
-"
--
-gt
-"
-0
-"
-\
-)
--
-o
-\
-(
-"
-_MIDL_MAJOR_VERSION
-"
-=
-"
-6
+7
 "
 -
 a
@@ -5135,75 +5100,43 @@ a
 "
 _MIDL_REV_VERSION
 "
--
-gt
+=
 "
-359
+0499
 "
 \
 )
 ;
 then
 #
-Starting
-with
 MIDL
 version
-6
+7
 .
-0
+00
 .
-359
-the
+0499
+defaults
+/
+env
+win64
+on
+x64
+platforms
+.
+#
 MIDL
-compiler
-#
-generates
-/
-Oicf
-/
-robust
-stubs
-by
-default
-which
-is
-not
-#
-compatible
-with
-versions
-of
-Windows
-older
-than
-Win2k
+version
+7
 .
-#
-This
-switches
-us
-back
-to
-the
-old
-behaviour
+00
 .
-When
-we
-drop
-#
-support
-for
-Windows
-older
-than
-Win2k
-we
-should
-remove
-#
-this
+0500
+or
+later
+has
+no
+problem
 .
 MIDL_FLAGS
 =
@@ -5212,24 +5145,19 @@ MIDL_FLAGS
 MIDL_FLAGS
 }
 -
-no_robust
+env
+win32
 "
 AC_MSG_RESULT
 (
 [
 need
 -
-no_robust
+env
+win32
 ]
 )
 else
-MIDL_FLAGS
-=
-"
-{
-MIDL_FLAGS
-}
-"
 AC_MSG_RESULT
 (
 [
@@ -5238,14 +5166,10 @@ needed
 ]
 )
 fi
-else
-MIDL_FLAGS
-=
-"
-{
-MIDL_FLAGS
-}
-"
+;
+;
+*
+)
 AC_MSG_RESULT
 (
 [
@@ -5253,7 +5177,9 @@ none
 needed
 ]
 )
-fi
+;
+;
+esac
 unset
 _MSVC_VER_FILTER
 else
