Bug 473845 - Break a potential cycle with XPConnect and mozStroageService This changeset removes a cycle that gets created between XPConnect and the storage service.  This accomplishes this by releasing the cached reference to XPConnect during xpcom-shutdown.
This was the last remaining leak of the browser-chrome test harness, so this
also sets the leak threshold to zero for that test.

r=bent

UltraBlame original commit: 44fd2796cee1a02147845b92cc0d983feaf5bc72

--- a/testing/mochitest/runtests.py.in
+++ b/testing/mochitest/runtests.py.in
@@ -3770,44 +3770,24 @@ browserChrome
 :
 #
 We
-still
+don
+'
+t
 leak
-a
-nondeterministic
-amount
 running
+the
+-
+-
 browser
 -
 chrome
 tests
 .
-#
-But
-we
-are
-close
-to
-0
-(
-bug
-)
-so
-start
-to
-prevent
-/
-detect
-regressions
-.
-(
-Bug
-460548
-)
 options
 .
 leakThreshold
 =
-76500
+0
 elif
 options
 .
