--- a/content/base/test/Makefile.in
+++ b/content/base/test/Makefile.in
@@ -1245,6 +1245,14 @@ file_CrossSiteXHR_inner
 .
 html
 \
+file_CrossSiteXHR_inner_data
+.
+sjs
+\
+file_CrossSiteXHR_inner
+.
+zip
+\
 file_CrossSiteXHR_server
 .
 sjs
