Bug 473861 - 'Workers: Using functions (rather than attributes) for message/error handlers doesn't work'. r+sr=mrbkap, a=sicking
UltraBlame original commit: 3783169ac623e161987628fd2392f0f70f358930

--- a/dom/src/threads/test/Makefile.in
+++ b/dom/src/threads/test/Makefile.in
@@ -471,6 +471,14 @@ errorPropagation_worker2
 .
 js
 \
+test_functionHandlers
+.
+html
+\
+functionHandlers_worker
+.
+js
+\
 test_importScripts
 .
 html
