Bug 464954: Update Access-Control implementation to latest draft and fix some bugs. r/sr=bz
UltraBlame original commit: 9fc993ac4427fd27314961058a0b708b7e8bb0cc

--- a/content/base/test/Makefile.in
+++ b/content/base/test/Makefile.in
@@ -1245,6 +1245,14 @@ file_CrossSiteXHR_inner
 .
 html
 \
+file_CrossSiteXHR_inner_data
+.
+sjs
+\
+file_CrossSiteXHR_inner
+.
+jar
+\
 file_CrossSiteXHR_server
 .
 sjs
