bug 472431, don't add install.rdf and chrome.manifest to installers and packages, as they're just for the language packs, r=bhearsum
UltraBlame original commit: 8fe5bc1ec5e943055b1948ed398eedb3b0301499

--- a/browser/locales/Makefile.in
+++ b/browser/locales/Makefile.in
@@ -1958,6 +1958,28 @@ stage
 setup
 .
 exe
+#
+copy
+xpi
+-
+stage
+over
+but
+not
+install
+.
+rdf
+and
+chrome
+.
+manifest
+#
+those
+are
+just
+for
+language
+packs
 cp
 -
 r
@@ -1979,6 +2001,27 @@ l10n
 stage
 /
 localized
+(
+RM
+)
+l10n
+-
+stage
+/
+localized
+/
+install
+.
+rdf
+l10n
+-
+stage
+/
+localized
+/
+chrome
+.
+manifest
 (
 MAKE
 )
@@ -2581,6 +2624,28 @@ STAGEDIST
 /
 uninstall
 endif
+#
+copy
+xpi
+-
+stage
+over
+but
+not
+install
+.
+rdf
+and
+chrome
+.
+manifest
+#
+those
+are
+just
+for
+language
+packs
 cd
 (
 DIST
@@ -2599,6 +2664,20 @@ AB_CD
 &
 \
 tar
+-
+-
+exclude
+=
+install
+.
+rdf
+-
+-
+exclude
+=
+chrome
+.
+manifest
 (
 TAR_CREATE_FLAGS
 )
