bug 474754 - sporadic test failures in test_wav_trunc.html. disable this test for now
UltraBlame original commit: 51315e49378bb1ce6c146c67b30f09e840557321

--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -688,10 +688,6 @@ test_wav_trailing
 .
 html
 \
-test_wav_trunc
-.
-html
-\
 test_wav_trunc_seek
 .
 html
@@ -715,6 +711,20 @@ wav
 (
 NULL
 )
+#
+XXX
+:
+disabled
+for
+now
+see
+bug
+474754
+#
+test_wav_trunc
+.
+html
+\
 else
 _TEST_FILES
 +
