--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -530,10 +530,6 @@ test_onloadedmetadata
 .
 html
 \
-test_progress1
-.
-html
-\
 test_progress3
 .
 html
@@ -601,6 +597,18 @@ ogv
 (
 NULL
 )
+#
+test_progress1
+.
+html
+disabled
+while
+we
+figure
+out
+the
+random
+failure
 else
 _TEST_FILES
 +
