Bug 446300 - move tools/test-harness/xpcshell-simple to testing/xpcshell; (Av1a-MC) Move the source harness directory; r=ted.mielczarek
UltraBlame original commit: 42c8844fe563e8318ecc24acb6e6b7b696901c3d

--- a/testing/xpcshell/Makefile.in
+++ b/testing/xpcshell/Makefile.in
@@ -158,9 +158,9 @@ Original
 Code
 is
 #
-Netscape
-Communications
-Corporation
+Mozilla
+.
+org
 .
 #
 Portions
@@ -174,7 +174,7 @@ Copyright
 (
 C
 )
-1998
+2005
 #
 the
 Initial
@@ -192,13 +192,13 @@ s
 )
 :
 #
-David
-Liebreich
+Boris
+Zbarsky
 <
-davel
-mozilla
+bzbarsky
+mit
 .
-com
+edu
 >
 (
 Original
@@ -424,12 +424,36 @@ autoconf
 mk
 MODULE
 =
-test_harness
+testing_xpcshell
+#
+Here
+'
+s
+how
+you
+let
+the
+build
+system
+know
+there
+are
+tests
+in
+the
+#
+"
+example
+"
+folder
+:
+ifdef
+ENABLE_TESTS
 DIRS
++
 =
-xpcshell
--
-simple
+example
+endif
 include
 (
 topsrcdir
