--- a/testing/xpcshell/example/Makefile.in
+++ b/testing/xpcshell/example/Makefile.in
@@ -205,6 +205,17 @@ Original
 author
 )
 #
+Jeff
+Walden
+<
+jwalden
++
+code
+mit
+.
+edu
+>
+#
 #
 Alternatively
 the
@@ -396,6 +407,85 @@ BLOCK
 *
 *
 *
+#
+#
+Makefile
+for
+installing
+and
+running
+xpcshell
+-
+based
+tests
+.
+You
+can
+use
+#
+this
+file
+as
+template
+when
+creating
+tests
+for
+a
+new
+module
+.
+Don
+'
+t
+#
+forget
+to
+change
+the
+lines
+marked
+below
+.
+See
+#
+http
+:
+/
+/
+developer
+.
+mozilla
+.
+org
+/
+en
+/
+docs
+/
+Writing_xpcshell
+-
+based_unit_tests
+#
+for
+detailed
+instructions
+.
+#
+#
+Note
+:
+DEPTH
+should
+be
+set
+to
+the
+relative
+path
+to
+mozilla
+/
 DEPTH
 =
 .
@@ -425,38 +515,62 @@ config
 autoconf
 .
 mk
-MODULE
-=
-test_harness_xpcshell_simple
 #
-Here
+Note
+:
+set
+the
+test
+module
 '
 s
-how
-you
-let
-the
-build
-system
-know
-there
-are
-tests
-in
-the
-#
-"
-example
-"
-folder
-:
-ifdef
-ENABLE_TESTS
-DIRS
-+
+name
+to
+test_
+<
+yourmodule
+>
+MODULE
 =
-example
-endif
+test_testing_xpcshell_example
+#
+This
+is
+a
+list
+of
+directories
+containing
+tests
+to
+run
+separated
+by
+spaces
+.
+#
+Most
+likely
+tho
+you
+won
+'
+t
+use
+more
+than
+one
+directory
+here
+.
+XPCSHELL_TESTS
+=
+\
+unit
+\
+(
+NULL
+)
 include
 (
 topsrcdir
@@ -467,3 +581,21 @@ config
 rules
 .
 mk
+#
+Note
+:
+Invoke
+any
+additional
+(
+non
+-
+xpcshell
+)
+test
+programs
+here
+.
+check
+:
+:
