Bug 459878, packaging changes from test major update from 3.0.6 to 3.1b2, r=ted.mielczarek
UltraBlame original commit: 501b8fce34fae30d45ff3539fba4630dbe002fe3

--- a/browser/installer/removed-files.in
+++ b/browser/installer/removed-files.in
@@ -4837,6 +4837,112 @@ res
 bloatcycle
 .
 html
+components
+/
+browsersearch
+.
+xpt
+components
+/
+nsResetPref
+.
+js
+plugins
+/
+Default
+Plugin
+.
+plugin
+/
+Contents
+/
+Info
+.
+plist
+plugins
+/
+Default
+Plugin
+.
+plugin
+/
+Contents
+/
+MacOS
+/
+Default
+Plugin
+plugins
+/
+Default
+Plugin
+.
+plugin
+/
+Contents
+/
+PkgInfo
+plugins
+/
+Default
+Plugin
+.
+plugin
+/
+Contents
+/
+Resources
+/
+Default
+Plugin
+.
+rsrc
+plugins
+/
+Default
+Plugin
+.
+plugin
+/
+Contents
+/
+Resources
+/
+English
+.
+lproj
+/
+InfoPlist
+.
+strings
+res
+/
+cursors
+/
+CVS
+/
+Entries
+res
+/
+cursors
+/
+CVS
+/
+Repository
+res
+/
+cursors
+/
+CVS
+/
+Root
+res
+/
+cursors
+/
+CVS
+/
+Tag
 #
 endif
 #
@@ -4867,6 +4973,9 @@ dictionaries
 PL
 .
 aff
+libjemalloc
+.
+so
 #
 endif
 #
