bug 462908 - Implement Freetype font backend for windows ce r=karlt, jdagget sr=stuart, vlad
UltraBlame original commit: aa27de3b85637bed160aa6419f4b99333bea69fd

--- a/config/autoconf.mk.in
+++ b/config/autoconf.mk.in
@@ -1714,6 +1714,9 @@ TK_CFLAGS
 CAIRO_FT_CFLAGS
 =
 CAIRO_FT_CFLAGS
+MOZ_TREE_FREETYPE
+=
+MOZ_TREE_FREETYPE
 MOZ_ENABLE_CAIRO_FT
 =
 MOZ_ENABLE_CAIRO_FT
