--- a/configure.in
+++ b/configure.in
@@ -15694,6 +15694,9 @@ lib
 STATIC_LIBIDL
 =
 1
+MOZ_TREE_FREETYPE
+=
+1
 AC_DEFINE
 (
 HAVE_SNPRINTF
@@ -47403,6 +47406,258 @@ dnl
 =
 =
 dnl
+Build
+Freetype
+in
+the
+tree
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+MOZ_ARG_ENABLE_BOOL
+(
+tree
+-
+freetype
+[
+-
+-
+enable
+-
+tree
+-
+freetype
+Enable
+Tree
+FreeType
+]
+MOZ_TREE_FREETYPE
+=
+1
+MOZ_TREE_FREETYPE
+=
+)
+if
+test
+-
+n
+"
+MOZ_TREE_FREETYPE
+"
+;
+then
+AC_DEFINE
+(
+MOZ_TREE_FREETYPE
+)
+AC_SUBST
+(
+MOZ_TREE_FREETYPE
+)
+MOZ_ENABLE_CAIRO_FT
+=
+1
+FT_FONT_FEATURE
+=
+"
+#
+define
+CAIRO_HAS_FT_FONT
+1
+"
+FC_FONT_FEATURE
+=
+"
+#
+define
+CAIRO_DISABLE_FONTCONFIG
+1
+"
+FT2_CFLAGS
+=
+"
+-
+I
+{
+topsrcdir
+}
+/
+modules
+/
+freetype2
+/
+include
+"
+CAIRO_FT_CFLAGS
+=
+"
+-
+I
+{
+topsrcdir
+}
+/
+modules
+/
+freetype2
+/
+include
+"
+FT2_LIBS
+=
+"
+{
+LIBXUL_DIST
+}
+/
+lib
+/
+freetype2
+.
+lib
+"
+CAIRO_FT_LIBS
+=
+"
+{
+LIBXUL_DIST
+}
+/
+lib
+/
+freetype2
+.
+lib
+"
+AC_DEFINE
+(
+HAVE_FT_BITMAP_SIZE_Y_PPEM
+)
+AC_DEFINE
+(
+HAVE_FT_GLYPHSLOT_EMBOLDEN
+)
+AC_DEFINE
+(
+HAVE_FT_LOAD_SFNT_TABLE
+)
+AC_SUBST
+(
+CAIRO_FT_CFLAGS
+)
+fi
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+dnl
 Installer
 dnl
 =
@@ -64963,6 +65218,15 @@ define
 CAIRO_HAS_WIN32_SURFACE
 1
 "
+if
+test
+-
+z
+"
+WINCE
+"
+;
+then
 WIN32_FONT_FEATURE
 =
 "
@@ -64971,6 +65235,10 @@ define
 CAIRO_HAS_WIN32_FONT
 1
 "
+else
+WIN32_FONT_FEATURE
+=
+fi
 PDF_SURFACE_FEATURE
 =
 "
@@ -65173,6 +65441,10 @@ DIRECTFB_SURFACE_FEATURE
 AC_SUBST
 (
 FT_FONT_FEATURE
+)
+AC_SUBST
+(
+FC_FONT_FEATURE
 )
 AC_SUBST
 (
