--- a/gfx/cairo/cairo/src/Makefile.in
+++ b/gfx/cairo/cairo/src/Makefile.in
@@ -1026,17 +1026,22 @@ cairo
 -
 win32
 -
-font
+surface
 .
 c
-\
+ifndef
+WINCE
+CSRCS
++
+=
 cairo
 -
 win32
 -
-surface
+font
 .
 c
+endif
 ifdef
 NS_PRINTING
 CSRCS
