--- a/gfx/thebes/public/Makefile.in
+++ b/gfx/thebes/public/Makefile.in
@@ -140,10 +140,6 @@ windows
 EXPORTS
 +
 =
-gfxWindowsFonts
-.
-h
-\
 gfxWindowsPlatform
 .
 h
@@ -165,6 +161,22 @@ EXPORTS
 gfxPDFSurface
 .
 h
+ifdef
+WINCE
+EXPORTS
++
+=
+gfxFT2Fonts
+.
+h
+else
+EXPORTS
++
+=
+gfxWindowsFonts
+.
+h
+endif
 endif
 ifeq
 (
