--- a/gfx/thebes/src/Makefile.in
+++ b/gfx/thebes/src/Makefile.in
@@ -178,10 +178,6 @@ windows
 CPPSRCS
 +
 =
-gfxWindowsFonts
-.
-cpp
-\
 gfxWindowsPlatform
 .
 cpp
@@ -201,6 +197,27 @@ cpp
 (
 NULL
 )
+ifdef
+WINCE
+DEFINES
++
+=
+-
+DMOZ_FT2_FONTS
+CPPSRCS
++
+=
+gfxFT2Fonts
+.
+cpp
+else
+CPPSRCS
++
+=
+gfxWindowsFonts
+.
+cpp
+endif
 CPPSRCS
 +
 =
@@ -641,6 +658,23 @@ MOZ_CAIRO_CFLAGS
 (
 TK_CFLAGS
 )
+ifeq
+(
+(
+MOZ_WIDGET_TOOLKIT
+)
+windows
+)
+ifdef
+WINCE
+CXXFLAGS
++
+=
+(
+CAIRO_FT_CFLAGS
+)
+endif
+endif
 ifeq
 (
 (
