Bug 356571 - loadOneOrMoreURIs gives up if one of the URLs has an unknown protocol, r=gavin
UltraBlame original commit: e369a4bf546c9b4fe0ddcd34119008d6153d0018

--- a/browser/base/content/test/Makefile.in
+++ b/browser/base/content/test/Makefile.in
@@ -625,7 +625,7 @@ browser_bug386835
 .
 js
 \
-bug386835
+dummy_page
 .
 html
 \
@@ -636,6 +636,10 @@ js
 browser_sanitize
 -
 sitepermissions
+.
+js
+\
+browser_bug356571
 .
 js
 \
