Bug 467825: Add a tool to the xulrunner SDK to add icon to xul-runner stub, r=bsmedberg NPOTB
UltraBlame original commit: cdfb8740793d6dd4f36e3bf46afc08bfba820af2

--- a/xulrunner/tools/redit/Makefile.in
+++ b/xulrunner/tools/redit/Makefile.in
@@ -1,19 +1,4 @@
 #
-vim
-:
-set
-ts
-=
-8
-sw
-=
-8
-sts
-=
-8
-et
-:
-#
 *
 *
 *
@@ -156,10 +141,8 @@ The
 Original
 Code
 is
-the
 Mozilla
-Browser
-code
+XULRunner
 .
 #
 #
@@ -172,9 +155,21 @@ Original
 Code
 is
 #
-Netscape
-Communications
-Corporation
+the
+Mozilla
+Foundation
+<
+http
+:
+/
+/
+www
+.
+mozilla
+.
+org
+/
+>
 .
 #
 Portions
@@ -188,7 +183,7 @@ Copyright
 (
 C
 )
-2002
+2008
 #
 the
 Initial
@@ -206,11 +201,11 @@ s
 )
 :
 #
-Brian
-Ryner
+Mark
+Finkle
 <
-bryner
-brianryner
+mfinkle
+mozilla
 .
 com
 >
@@ -409,6 +404,12 @@ DEPTH
 =
 .
 .
+/
+.
+.
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -428,20 +429,9 @@ config
 autoconf
 .
 mk
-DIRS
+MODULE
 =
-\
-setup
-\
-stub
-\
-app
-\
-examples
-\
-(
-NULL
-)
+redit
 ifeq
 (
 (
@@ -449,33 +439,56 @@ OS_ARCH
 )
 WINNT
 )
-ifdef
-MOZ_INSTALLER
-DIRS
-+
+CPPSRCS
 =
-installer
-/
-windows
-endif
-endif
-ifneq
+redit
+.
+cpp
+PROGRAM
+=
+redit
 (
+BIN_SUFFIX
+)
+SDK_BINARY
+=
+\
 (
-filter
-WINNT
-WINCE
+HOST_PROGRAM
+)
+\
+(
+NULL
+)
+endif
+ifeq
+(
 (
 OS_ARCH
 )
+WINCE
 )
-)
-DIRS
-+
+HOST_CPPSRCS
 =
-tools
-/
 redit
+.
+cpp
+HOST_PROGRAM
+=
+redit
+(
+BIN_SUFFIX
+)
+SDK_BINARY
+=
+\
+(
+HOST_PROGRAM
+)
+\
+(
+NULL
+)
 endif
 include
 (
