Bug 451958. Support Access-Controls for media loads. r+sr=roc
UltraBlame original commit: 698bf7ff3992bbba1936687b9987d7ab13bf7b05

--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -502,6 +502,14 @@ _TEST_FILES
 +
 =
 \
+test_access_control
+.
+html
+\
+file_access_controls
+.
+html
+\
 test_bug448534
 .
 html
@@ -586,9 +594,32 @@ test_videoDocumentTitle
 .
 html
 \
+320x240
+.
+allow
+-
+origin
+.
+ogv
+\
+320x240
+.
+allow
+-
+origin
+.
+ogv
+^
+headers
+^
+\
 bug461281
 .
 ogg
+\
+redirect
+.
+sjs
 \
 seek
 .
