Bug 474937 - Fix Windows crashes with video element caused by buggy mmx/sse optimisations - rs=roc
UltraBlame original commit: b62f99aa1fb6a9d10ecfbe3cb18e19d1ce074c08

--- a/media/libtheora/lib/Makefile.in
+++ b/media/libtheora/lib/Makefile.in
@@ -455,6 +455,13 @@ ifneq
 (
 OS_ARCH
 )
+WINNT
+)
+ifneq
+(
+(
+OS_ARCH
+)
 SunOS
 )
 DEFINES
@@ -464,6 +471,7 @@ DEFINES
 DOC_X86ASM
 -
 DUSE_ASM
+endif
 endif
 endif
 VPATH
@@ -550,51 +558,6 @@ OS_TEST
 )
 86
 )
-ifeq
-(
-(
-OS_ARCH
-)
-WINNT
-)
-VPATH
-+
-=
-(
-srcdir
-)
-/
-dec
-/
-x86_vc
-CSRCS
-+
-=
-\
-mmxfrag
-.
-c
-\
-mmxloopfilter
-.
-c
-\
-x86state
-.
-c
-\
-mmxstate
-.
-c
-\
-mmxidct
-.
-c
-\
-(
-NULL
-)
-else
 VPATH
 +
 =
@@ -628,7 +591,6 @@ c
 (
 NULL
 )
-endif
 endif
 include
 (
