Disable TestCrashReporterAPI TUnit test due to random failures on Windows - this test currently only runs on non-Firefox boxes. r=ted, bug 474688
UltraBlame original commit: c4e2504f3901480e26129380ae62cefeda2f6b0a

--- a/toolkit/crashreporter/test/Makefile.in
+++ b/toolkit/crashreporter/test/Makefile.in
@@ -1012,12 +1012,35 @@ NULL
 endif
 ifndef
 MOZ_ENABLE_LIBXUL
+#
+XXX
+TestCrashReporterAPI
+gives
+random
+failures
+on
+exit
+for
+unexplained
+reason
+#
+therefore
+it
+is
+disabled
+.
+See
+Bug
+474688
+.
+#
 check
 :
 :
 (
 PROGRAM
 )
+#
 (
 RUN_TEST_PROGRAM
 )
