Bug 451958 - Disable tests that fail randomly on Windows - r=roc
UltraBlame original commit: e85af1185061889cce2a000154a0fb2277b0d022

--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -542,34 +542,6 @@ test_progress3
 .
 html
 \
-test_seek1
-.
-html
-\
-test_seek3
-.
-html
-\
-test_seek4
-.
-html
-\
-test_seek5
-.
-html
-\
-test_seek6
-.
-html
-\
-test_seek7
-.
-html
-\
-test_seek8
-.
-html
-\
 test_standalone
 .
 html
@@ -579,10 +551,6 @@ test_timeupdate1
 html
 \
 test_timeupdate2
-.
-html
-\
-test_timeupdate3
 .
 html
 \
@@ -628,6 +596,73 @@ ogv
 (
 NULL
 )
+ifneq
+(
+(
+OS_ARCH
+)
+WINNT
+)
+#
+These
+tests
+are
+disabled
+on
+windows
+until
+we
+#
+figure
+out
+the
+random
+failures
+.
+See
+bug
+475369
+.
+_TEST_FILES
++
+=
+\
+test_seek1
+.
+html
+\
+test_seek3
+.
+html
+\
+test_seek4
+.
+html
+\
+test_seek5
+.
+html
+\
+test_seek6
+.
+html
+\
+test_seek7
+.
+html
+\
+test_seek8
+.
+html
+\
+test_timeupdate3
+.
+html
+\
+(
+NULL
+)
+endif
 #
 test_progress1
 .
