Bug 475298 - mochitests for accessible relations, r=davidb, marcoz
UltraBlame original commit: 13e95c7ff78be26bff0d3274c518066419bb83c1

--- a/accessible/tests/mochitest/Makefile.in
+++ b/accessible/tests/mochitest/Makefile.in
@@ -494,6 +494,10 @@ nsIAccessibleEditableText
 .
 js
 \
+relations
+.
+js
+\
 role
 .
 js
@@ -683,6 +687,14 @@ html
 test_nsOuterDocAccessible
 .
 html
+\
+test_relations
+.
+html
+\
+test_relations
+.
+xul
 \
 test_role_nsHyperTextAcc
 .
