Bug 468782 - TM: js_FastValueToIterator and js_FastCallIteratorNext can reenter. r=brendan. Note that this changeset alone does not fix the bug; an upcoming patch in bug 462027 completes the fix.
UltraBlame original commit: 17663da1b840384852133b3b97f6fc0298682d91

--- a/js/src/imacro_asm.js.in
+++ b/js/src/imacro_asm.js.in
@@ -1013,6 +1013,50 @@ JOF_UINT16
 =
 0
 )
+{
+if
+(
+/
+^
+\
+(
+/
+.
+test
+(
+op
+.
+imm1
+)
+)
+return
+'
+(
+_
+&
+0xff00
+)
+>
+>
+8
+(
+_
+&
+0xff
+)
+'
+.
+replace
+(
+/
+_
+/
+g
+op
+.
+imm1
+)
+;
 return
 (
 (
@@ -1038,6 +1082,7 @@ imm1
 0xff
 )
 ;
+}
 throw
 new
 Error
@@ -1055,6 +1100,137 @@ implemented
 )
 ;
 }
+const
+line_regexp_parts
+=
+[
+"
+^
+(
+?
+:
+(
+\
+\
+w
++
+)
+:
+)
+?
+"
+"
+\
+\
+s
+*
+(
+\
+\
+.
+?
+\
+\
+w
++
+)
+"
+"
+(
+?
+:
+\
+\
+s
++
+(
+\
+\
+w
++
+|
+\
+\
+(
+[
+^
+)
+]
+*
+\
+\
+)
+)
+)
+?
+"
+"
+(
+?
+:
+\
+\
+s
++
+(
+[
+\
+\
+w
+-
+]
++
+|
+\
+\
+(
+[
+^
+)
+]
+*
+\
+\
+)
+)
+)
+?
+"
+"
+(
+?
+:
+\
+\
+s
+*
+(
+?
+:
+#
+.
+*
+)
+)
+?
+"
+]
+;
+const
+line_regexp
+=
+new
+RegExp
+(
+line_regexp_parts
+.
+join
+(
+"
+"
+)
+)
+;
 /
 *
 *
@@ -1125,6 +1301,33 @@ Operand
 name
 |
 number
+|
+'
+(
+'
+Expr
+'
+)
+'
+*
+Expr
+:
+:
+=
+a
+constant
+-
+expression
+in
+the
+C
++
++
+language
+*
+containing
+no
+parentheses
 *
 *
 We
@@ -1146,6 +1349,29 @@ using
 split
 and
 regexps
+.
+For
+ease
+of
+parsing
+parentheses
+are
+*
+banned
+in
+an
+Expr
+for
+now
+even
+in
+quotes
+or
+a
+C
++
++
+comment
 .
 *
 *
@@ -1308,74 +1534,7 @@ continue
 let
 m
 =
-/
-(
-?
-:
-(
-\
-w
-+
-)
-:
-)
-?
-\
-s
-*
-(
-\
-.
-?
-\
-w
-+
-)
-(
-?
-:
-\
-s
-+
-(
-\
-w
-+
-)
-)
-?
-(
-?
-:
-\
-s
-+
-(
-[
-\
-w
--
-]
-+
-)
-)
-?
-(
-?
-:
-\
-s
-*
-(
-?
-:
-#
-.
-*
-)
-)
-?
-/
+line_regexp
 .
 exec
 (
