Bug 460913 - "Installer shouldn't copy xulrunner files into Firefox install directory" [r=bsmedberg]
UltraBlame original commit: b3facc5a7ccb8be97c7c406f66b03d4fb1d45a85

--- a/configure.in
+++ b/configure.in
@@ -31746,6 +31746,69 @@ AC_SUBST
 (
 LIBXUL_DIST
 )
+SYSTEM_LIBXUL
+=
+MOZ_ARG_WITH_BOOL
+(
+system
+-
+libxul
+[
+-
+-
+with
+-
+system
+-
+libxul
+Use
+system
+installed
+libxul
+SDK
+]
+SYSTEM_LIBXUL
+=
+1
+)
+if
+test
+-
+n
+"
+SYSTEM_LIBXUL
+"
+&
+&
+test
+-
+z
+"
+MOZ_ENABLE_LIBXUL
+"
+;
+then
+AC_MSG_ERROR
+(
+[
+-
+-
+with
+-
+system
+-
+libxul
+needs
+-
+-
+with
+-
+libxul
+-
+sdk
+]
+)
+fi
 dnl
 =
 =
@@ -68848,6 +68911,10 @@ COMPILE_CXXFLAGS
 AC_SUBST
 (
 SYSTEM_MAKEDEPEND
+)
+AC_SUBST
+(
+SYSTEM_LIBXUL
 )
 AC_SUBST
 (
