--- a/dom/tests/mochitest/ajax/offline/Makefile.in
+++ b/dom/tests/mochitest/ajax/offline/Makefile.in
@@ -489,10 +489,6 @@ test_offlineIFrame
 .
 html
 \
-test_offlineMode
-.
-html
-\
 test_bug445544
 .
 html
@@ -502,10 +498,6 @@ test_foreign
 html
 \
 test_fallback
-.
-html
-\
-test_updatingManifest
 .
 html
 \
@@ -627,21 +619,6 @@ foreign2
 .
 html
 \
-notonwhitelist
-.
-html
-\
-onwhitelist
-.
-html
-\
-onwhitelist
-.
-html
-^
-headers
-^
-\
 updatingIFrame
 .
 html
@@ -720,6 +697,54 @@ html
 (
 NULL
 )
+#
+Bug
+466314
+-
+updatingImplicit
+.
+html
+(
+used
+by
+test_offlineMode
+.
+html
+and
+test_updatingManifest
+.
+html
+)
+crashes
+SeaMonkey
+#
+test_offlineMode
+.
+html
+\
+#
+notonwhitelist
+.
+html
+\
+#
+test_updatingManifest
+.
+html
+\
+#
+onwhitelist
+.
+html
+\
+#
+onwhitelist
+.
+html
+^
+headers
+^
+\
 libs
 :
 :
