bug 474737 - Windows ce tools refactor, NPOTB r=dougt, ted
UltraBlame original commit: 69502a5ec1afee641cd7175e7c8f41d09bfabe30

--- a/config/autoconf.mk.in
+++ b/config/autoconf.mk.in
@@ -2041,9 +2041,9 @@ MOZ_XULRUNNER
 WINCE
 =
 WINCE
-WINCE_SDK
+WINCE_SDK_DIR
 =
-WINCE_SDK
+WINCE_SDK_DIR
 MOZ_DISTRIBUTION_ID
 =
 MOZ_DISTRIBUTION_ID
