--- a/configure.in
+++ b/configure.in
@@ -2365,7 +2365,7 @@ wince
 -
 sdk
 =
-WINCE_SDK
+WINCE_SDK_DIR
 The
 path
 to
@@ -2374,15 +2374,11 @@ windows
 mobile
 sdk
 ]
-WINCE_SDK
+WINCE_SDK_DIR
 =
 withval
 )
 export
-WINCE
-=
-1
-mk_add_options
 WINCE
 =
 1
@@ -2479,83 +2475,35 @@ SDK
 in
 :
 echo
-WINCE_SDK
+WINCE_SDK_DIR
 ac_exeext
 =
 .
 exe
-rm
--
-f
-srcdir
-/
-build
-/
-wince
-/
-shunt
-/
-include
-/
-windows
-.
-h
-echo
--
-n
-"
-#
-define
-TOPSRCDIR
-\
-"
-"
->
-srcdir
-/
-build
-/
-wince
-/
-tools
-/
-topsrcdir
-.
-h
-echo
-cd
-"
-_topsrcdir
-"
-&
-&
+_pwdw
+=
 pwd
 -
 W
-|
-tr
-'
-\
-n
-'
-'
-\
-"
-'
->
->
-srcdir
-/
-build
-/
-wince
-/
-tools
-/
-topsrcdir
-.
-h
+_pwd
+=
+pwd
 make
+WINCE_SDK_DIR
+=
+"
+WINCE_SDK_DIR
+"
+TOPSRCDIR
+=
+"
+srcdir
+"
+OBJDIR
+=
+"
+_pwdw
+"
 -
 C
 srcdir
@@ -2565,56 +2513,125 @@ build
 wince
 /
 tools
-echo
+CC
+=
 "
-#
-include
-\
-"
-WINCE_SDK
+_pwd
 /
-windows
-.
-h
-\
-"
-"
->
-srcdir
+dist
 /
-build
+sdk
 /
+bin
+/
+arm
+-
 wince
-/
-shunt
-/
-include
-/
-windows
-.
-h
-echo
+-
+gcc
 "
-#
-define
-GetProcAddress
-GetProcAddressA
+CXX
+=
 "
->
->
-srcdir
+_pwd
 /
-build
+dist
 /
+sdk
+/
+bin
+/
+arm
+-
 wince
+-
+gcc
+"
+CPP
+=
+"
+_pwd
 /
-shunt
+dist
 /
-include
+sdk
 /
-windows
-.
-h
+bin
+/
+arm
+-
+wince
+-
+gcc
+"
+LD
+=
+"
+_pwd
+/
+dist
+/
+sdk
+/
+bin
+/
+arm
+-
+wince
+-
+link
+"
+AR
+=
+"
+_pwd
+/
+dist
+/
+sdk
+/
+bin
+/
+arm
+-
+wince
+-
+lib
+"
+AS
+=
+"
+_pwd
+/
+dist
+/
+sdk
+/
+bin
+/
+arm
+-
+wince
+-
+as
+"
+RC
+=
+"
+_pwd
+/
+dist
+/
+sdk
+/
+bin
+/
+arm
+-
+wince
+-
+res
+"
 echo
 -
 -
@@ -68786,7 +68803,7 @@ WINCE
 )
 AC_SUBST
 (
-WINCE_SDK
+WINCE_SDK_DIR
 )
 AC_SUBST
 (
