Bug 468782 - TM: js_FastValueToIterator and js_FastCallIteratorNext can reenter (relanding with a bug fix). r=brendan. Note that this changeset alone does not fix the bug; an upcoming patch in bug 462027 completes the fix.
UltraBlame original commit: 2773d74789f4b1d6f1faf472d1bd5c8033341c1c

--- a/js/src/imacro_asm.js.in
+++ b/js/src/imacro_asm.js.in
@@ -833,6 +833,22 @@ op
 .
 info
 ;
+let
+imm1Expr
+=
+/
+^
+\
+(
+/
+.
+test
+(
+op
+.
+imm1
+)
+;
 if
 (
 info
@@ -930,6 +946,13 @@ JOF_JUMP
 =
 0
 )
+{
+ASSERT
+(
+!
+imm1Expr
+)
+;
 return
 (
 (
@@ -955,6 +978,7 @@ target
 0xff
 )
 ;
+}
 if
 (
 info
@@ -987,6 +1011,61 @@ JOF_INT8
 0
 )
 {
+if
+(
+imm1Expr
+)
+return
+op
+.
+imm1
+;
+if
+(
+isNaN
+(
+Number
+(
+op
+.
+imm1
+)
+)
+|
+|
+Number
+(
+op
+.
+imm1
+)
+!
+=
+parseInt
+(
+op
+.
+imm1
+)
+)
+throw
+new
+Error
+(
+"
+invalid
+8
+-
+bit
+operand
+:
+"
++
+op
+.
+imm1
+)
+;
 return
 (
 op
@@ -1013,6 +1092,39 @@ JOF_UINT16
 =
 0
 )
+{
+if
+(
+imm1Expr
+)
+return
+'
+(
+_
+&
+0xff00
+)
+>
+>
+8
+(
+_
+&
+0xff
+)
+'
+.
+replace
+(
+/
+_
+/
+g
+op
+.
+imm1
+)
+;
 return
 (
 (
@@ -1038,6 +1150,7 @@ imm1
 0xff
 )
 ;
+}
 throw
 new
 Error
@@ -1055,6 +1168,137 @@ implemented
 )
 ;
 }
+const
+line_regexp_parts
+=
+[
+"
+^
+(
+?
+:
+(
+\
+\
+w
++
+)
+:
+)
+?
+"
+"
+\
+\
+s
+*
+(
+\
+\
+.
+?
+\
+\
+w
++
+)
+"
+"
+(
+?
+:
+\
+\
+s
++
+(
+\
+\
+w
++
+|
+\
+\
+(
+[
+^
+)
+]
+*
+\
+\
+)
+)
+)
+?
+"
+"
+(
+?
+:
+\
+\
+s
++
+(
+[
+\
+\
+w
+-
+]
++
+|
+\
+\
+(
+[
+^
+)
+]
+*
+\
+\
+)
+)
+)
+?
+"
+"
+(
+?
+:
+\
+\
+s
+*
+(
+?
+:
+#
+.
+*
+)
+)
+?
+"
+]
+;
+const
+line_regexp
+=
+new
+RegExp
+(
+line_regexp_parts
+.
+join
+(
+"
+"
+)
+)
+;
 /
 *
 *
@@ -1125,6 +1369,33 @@ Operand
 name
 |
 number
+|
+'
+(
+'
+Expr
+'
+)
+'
+*
+Expr
+:
+:
+=
+a
+constant
+-
+expression
+in
+the
+C
++
++
+language
+*
+containing
+no
+parentheses
 *
 *
 We
@@ -1146,6 +1417,29 @@ using
 split
 and
 regexps
+.
+For
+ease
+of
+parsing
+parentheses
+are
+*
+banned
+in
+an
+Expr
+for
+now
+even
+in
+quotes
+or
+a
+C
++
++
+comment
 .
 *
 *
@@ -1308,74 +1602,7 @@ continue
 let
 m
 =
-/
-(
-?
-:
-(
-\
-w
-+
-)
-:
-)
-?
-\
-s
-*
-(
-\
-.
-?
-\
-w
-+
-)
-(
-?
-:
-\
-s
-+
-(
-\
-w
-+
-)
-)
-?
-(
-?
-:
-\
-s
-+
-(
-[
-\
-w
--
-]
-+
-)
-)
-?
-(
-?
-:
-\
-s
-*
-(
-?
-:
-#
-.
-*
-)
-)
-?
-/
+line_regexp
 .
 exec
 (
