Bug 464394 - Define MOZ_GFX_OPTIMIZE_MOBILE on WINCE. r=ted
UltraBlame original commit: 13a7e1e0134ea96781e5c9b16adda2ddd680e1e1

--- a/config/autoconf.mk.in
+++ b/config/autoconf.mk.in
@@ -546,6 +546,9 @@ MOZ_WIDGET_TOOLKIT
 MOZ_GFX_TOOLKIT
 =
 MOZ_GFX_TOOLKIT
+MOZ_GFX_OPTIMIZE_MOBILE
+=
+MOZ_GFX_OPTIMIZE_MOBILE
 MOZ_DFB
 =
 MOZ_DFB
