--- a/configure.in
+++ b/configure.in
@@ -15781,6 +15781,9 @@ MOZ_USER_DIR
 "
 Mozilla
 "
+MOZ_GFX_OPTIMIZE_MOBILE
+=
+1
 ;
 ;
 *
@@ -51722,25 +51725,9 @@ AC_DEFINE
 (
 NS_OSSO
 )
-dnl
-XXX
-this
-should
-go
-somewhere
-else
-;
-it
-'
-s
-not
-just
-for
-OSSO
-AC_DEFINE
-(
 MOZ_GFX_OPTIMIZE_MOBILE
-)
+=
+1
 fi
 AC_SUBST
 (
@@ -52551,6 +52538,161 @@ fi
 CFLAGS
 =
 _SAVE_CFLAGS
+fi
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+dnl
+enable
+mobile
+optimizations
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+MOZ_ARG_ENABLE_BOOL
+(
+mobile
+-
+optimize
+[
+-
+-
+enable
+-
+mobile
+-
+optimize
+Enable
+mobile
+optimizations
+]
+MOZ_GFX_OPTIMIZE_MOBILE
+=
+1
+)
+AC_SUBST
+(
+MOZ_GFX_OPTIMIZE_MOBILE
+)
+if
+test
+"
+MOZ_GFX_OPTIMIZE_MOBILE
+"
+;
+then
+AC_DEFINE
+(
+MOZ_GFX_OPTIMIZE_MOBILE
+)
 fi
 dnl
 =
