Bug 414540 - RDFXMLDataSource should reject cross-domain redirects. Original patch by Neil Deakin, fixed up with better testing, r+sr=bz
UltraBlame original commit: 01c42e286b4c7065a1724ba81753214f2d1eaa2b

--- a/rdf/tests/Makefile.in
+++ b/rdf/tests/Makefile.in
@@ -399,6 +399,9 @@ srcdir
 VPATH
 =
 srcdir
+MODULE
+=
+test_rdf
 include
 (
 DEPTH
@@ -414,6 +417,9 @@ DIRS
 rdfcat
 rdfpoll
 triplescat
+XPCSHELL_TESTS
+=
+unit
 include
 (
 topsrcdir
