Bug 467672 - need additional bidi.numerals setting for Persian (eastern Arabic-Indic) numerals; r=roc,jfkthame sr=roc
UltraBlame original commit: 3470b0b3a98d28a6a14236f461d31ab6ec0e6af5

--- a/layout/base/tests/Makefile.in
+++ b/layout/base/tests/Makefile.in
@@ -694,6 +694,76 @@ ref
 .
 html
 \
+bug467672
+-
+1
+.
+html
+\
+bug467672
+-
+1
+-
+ref
+.
+html
+\
+bug467672
+-
+2
+.
+html
+\
+bug467672
+-
+2
+-
+ref
+.
+html
+\
+bug467672
+-
+3
+.
+html
+\
+bug467672
+-
+3
+-
+ref
+.
+html
+\
+bug467672
+-
+4
+.
+html
+\
+bug467672
+-
+4
+-
+ref
+.
+html
+\
+bug467672
+-
+5
+.
+html
+\
+bug467672
+-
+5
+-
+ref
+.
+html
+\
 (
 NULL
 )
