Bug 474988: Mismatched adds and removes of install listeners will fail. r=robstrong
UltraBlame original commit: 501b9c8c2f2bf8e33b66d91dd0101389150cb2f8

--- a/toolkit/mozapps/extensions/src/nsExtensionManager.js.in
+++ b/toolkit/mozapps/extensions/src/nsExtensionManager.js.in
@@ -28666,38 +28666,15 @@ length
 =
 0
 )
-{
-for
+this
+.
+_callInstallListeners
 (
-var
-i
-=
-0
-;
-i
-<
-this
-.
-_installListeners
-.
-length
-;
-+
-+
-i
-)
-this
-.
-_installListeners
-[
-i
-]
-.
+"
 onInstallsCompleted
-(
+"
 )
 ;
-}
 }
 /
 *
@@ -30306,34 +30283,13 @@ _installManifest
 =
 installManifest
 ;
-for
+em
+.
+_callInstallListeners
 (
-var
-i
-=
-0
-;
-i
-<
-em
-.
-_installListeners
-.
-length
-;
-+
-+
-i
-)
-em
-.
-_installListeners
-[
-i
-]
-.
+"
 onCompatibilityCheckStarted
-(
+"
 item
 )
 ;
@@ -30568,34 +30524,13 @@ Completed
 "
 )
 ;
-for
+em
+.
+_callInstallListeners
 (
-var
-i
-=
-0
-;
-i
-<
-em
-.
-_installListeners
-.
-length
-;
-+
-+
-i
-)
-em
-.
-_installListeners
-[
-i
-]
-.
+"
 onCompatibilityCheckEnded
-(
+"
 addon
 status
 )
@@ -30898,34 +30833,13 @@ this
 "
 )
 ;
-for
+em
+.
+_callInstallListeners
 (
-var
-i
-=
-0
-;
-i
-<
-em
-.
-_installListeners
-.
-length
-;
-+
-+
-i
-)
-em
-.
-_installListeners
-[
-i
-]
-.
+"
 onInstallEnded
-(
+"
 addon
 INSTALLERROR_INCOMPATIBLE_VERSION
 )
@@ -31005,38 +30919,15 @@ length
 =
 0
 )
-{
-for
+em
+.
+_callInstallListeners
 (
-var
-i
-=
-0
-;
-i
-<
-em
-.
-_installListeners
-.
-length
-;
-+
-+
-i
-)
-em
-.
-_installListeners
-[
-i
-]
-.
+"
 onInstallsCompleted
-(
+"
 )
 ;
-}
 }
 QueryInterface
 :
@@ -31160,34 +31051,13 @@ gApp
 id
 )
 ;
-for
+this
+.
+_callInstallListeners
 (
-var
-i
-=
-0
-;
-i
-<
-this
-.
-_installListeners
-.
-length
-;
-+
-+
-i
-)
-this
-.
-_installListeners
-[
-i
-]
-.
+"
 onInstallStarted
-(
+"
 addon
 )
 ;
@@ -31267,34 +31137,13 @@ proceed
 "
 )
 ;
-for
+this
+.
+_callInstallListeners
 (
-var
-i
-=
-0
-;
-i
-<
-this
-.
-_installListeners
-.
-length
-;
-+
-+
-i
-)
-this
-.
-_installListeners
-[
-i
-]
-.
+"
 onInstallEnded
-(
+"
 addon
 INSTALLERROR_INVALID_MANIFEST
 )
@@ -31837,34 +31686,13 @@ t
 care
 about
 .
-for
+this
+.
+_callInstallListeners
 (
-var
-i
-=
-0
-;
-i
-<
-this
-.
-_installListeners
-.
-length
-;
-+
-+
-i
-)
-this
-.
-_installListeners
-[
-i
-]
-.
+"
 onInstallEnded
-(
+"
 addon
 INSTALLERROR_RESTRICTED
 )
@@ -32679,34 +32507,13 @@ is
 complete
 notify
 observers
-for
+this
+.
+_callInstallListeners
 (
-var
-i
-=
-0
-;
-i
-<
-this
-.
-_installListeners
-.
-length
-;
-+
-+
-i
-)
-this
-.
-_installListeners
-[
-i
-]
-.
+"
 onInstallEnded
-(
+"
 addon
 installData
 .
@@ -40315,34 +40122,13 @@ downloading
 "
 )
 ;
-for
+this
+.
+_callInstallListeners
 (
-var
-i
-=
-0
-;
-i
-<
-this
-.
-_installListeners
-.
-length
-;
-+
-+
-i
-)
-this
-.
-_installListeners
-[
-i
-]
-.
+"
 onDownloadStarted
-(
+"
 addon
 )
 ;
@@ -40353,34 +40139,13 @@ nsIXPIProgressDialog
 .
 DOWNLOAD_DONE
 :
-for
+this
+.
+_callInstallListeners
 (
-var
-i
-=
-0
-;
-i
-<
-this
-.
-_installListeners
-.
-length
-;
-+
-+
-i
-)
-this
-.
-_installListeners
-[
-i
-]
-.
+"
 onDownloadEnded
-(
+"
 addon
 )
 ;
@@ -40508,40 +40273,17 @@ value
 =
 0
 )
-{
-for
+this
+.
+_callInstallListeners
 (
-var
-i
-=
-0
-;
-i
-<
-this
-.
-_installListeners
-.
-length
-;
-+
-+
-i
-)
-this
-.
-_installListeners
-[
-i
-]
-.
+"
 onInstallEnded
-(
+"
 addon
 value
 )
 ;
-}
 break
 ;
 case
@@ -40672,38 +40414,15 @@ _compatibilityCheckCount
 =
 0
 )
-{
-for
+this
+.
+_callInstallListeners
 (
-var
-i
-=
-0
-;
-i
-<
-this
-.
-_installListeners
-.
-length
-;
-+
-+
-i
-)
-this
-.
-_installListeners
-[
-i
-]
-.
+"
 onInstallsCompleted
-(
+"
 )
 ;
-}
 }
 break
 ;
@@ -40738,34 +40457,13 @@ value
 maxValue
 )
 {
-for
+this
+.
+_callInstallListeners
 (
-var
-i
-=
-0
-;
-i
-<
-this
-.
-_installListeners
-.
-length
-;
-+
-+
-i
-)
-this
-.
-_installListeners
-[
-i
-]
-.
+"
 onDownloadProgress
-(
+"
 addon
 value
 maxValue
@@ -40895,16 +40593,166 @@ EM_removeInstallListenerAt
 index
 )
 {
+if
+(
+index
+<
+0
+|
+|
+index
+>
+=
+this
+.
+_installListeners
+.
+length
+)
+throw
+Cr
+.
+NS_ERROR_INVALID_ARGUMENT
+;
+this
+.
+_installListeners
+[
+index
+]
+=
+null
+;
+while
+(
+this
+.
+_installListeners
+[
+this
+.
+_installListeners
+.
+length
+-
+1
+]
+=
+=
+=
+null
+)
 this
 .
 _installListeners
 .
 splice
 (
-index
+this
+.
+_installListeners
+.
+length
+-
+1
 1
 )
 ;
+}
+_callInstallListeners
+:
+function
+EM__callInstallListeners
+(
+method
+)
+{
+for
+(
+var
+i
+=
+0
+;
+i
+<
+this
+.
+_installListeners
+.
+length
+;
++
++
+i
+)
+{
+try
+{
+if
+(
+this
+.
+_installListeners
+[
+i
+]
+)
+this
+.
+_installListeners
+[
+i
+]
+[
+method
+]
+.
+apply
+(
+this
+.
+_installListeners
+[
+i
+]
+Array
+.
+slice
+(
+arguments
+1
+)
+)
+;
+}
+catch
+(
+e
+)
+{
+LOG
+(
+"
+Failure
+in
+install
+listener
+'
+s
+"
++
+method
++
+"
+:
+"
++
+e
+)
+;
+}
+}
 }
 /
 *
