Add API allowing plugins to participate in private browsing. b=468877 r/sr=jst
UltraBlame original commit: ff75b28255c9fa5f123d689c14c3d9e18b2151f8

--- a/modules/plugin/test/mochitest/Makefile.in
+++ b/modules/plugin/test/mochitest/Makefile.in
@@ -436,6 +436,20 @@ _TEST_FILES
 test_npruntime
 .
 xul
+_TEST_FILES
+=
+\
+test_npruntime
+.
+xul
+\
+test_privatemode
+.
+xul
+\
+(
+NULL
+)
 libs
 :
 :
