bug 475811 - provide a widgetToolkit attribute on nsIXULRuntime. r=bsmedberg
UltraBlame original commit: ad08e07cb8e6eac1b38c11540fb87d13388be5db

--- a/toolkit/xre/Makefile.in
+++ b/toolkit/xre/Makefile.in
@@ -1507,6 +1507,7 @@ endif
 DEFINES
 +
 =
+\
 -
 DOS_TARGET
 =
@@ -1514,6 +1515,17 @@ DOS_TARGET
 "
 (
 OS_TARGET
+)
+\
+"
+\
+-
+DMOZ_WIDGET_TOOLKIT
+=
+\
+"
+(
+MOZ_WIDGET_TOOLKIT
 )
 \
 "
